<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">com.smartkeyboard.rainbow</string>
    <string name="app_package_name">com.smartkeyboard.rainbow</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_idle">RainbowKey</string>
    <string name="alert_attention_title">Attention !</string>
    <string name="alert_attention_messenger">When you enable RainbowKey, you will receive a warning that says the keyboard may collect your personal data. This is a standard Android warning for any third party keyboard. We PROMISE Emoji Keyboard  will NEVER collect any of your private data! </string>
    <string name="toast_enable_keyboard">Enable Emoji Keyboard</string>
    <string name="toast_select_keyboard">Select Emoji Keyboard</string>
    <string name="main_activity_edittext_hint">Try typing here now...</string>
    <string name="keyboard_theme_dark" translatable="false">Dark</string>
    <string name="keyboard_theme_grey" translatable="false">Grey</string>
    <string name="keyboard_theme_classic" translatable="false">Classic</string>
    <string name="keyboard_theme_freshair" translatable="false">Freshair</string>
    <string name="keyboard_theme_pop" translatable="false">Pop</string>
    <string name="keyboard_theme_electric" translatable="false">Electric</string>
    <string name="settings_button_sound">Sounds</string>
    <string name="settings_button_auto_correction">Auto-correction</string>
    <string name="settings_button_auto_capitalization">Auto-capitalization</string>
    <string name="settings_button_word_prediction">Word Prediction</string>
    <string name="settings_button_swipe">Swipe</string>
    <string name="settings_button_more_settings">More Settings</string>
    <string name="fb_app_id">1474873346171463</string>

</resources>