<?xml version="1.0" encoding="utf-8"?>
<com.smartkeyboard.rainbow.view.HSSettingsPanelView xmlns:android="http://schemas.android.com/apk/res/android"
    style="?attr/settingsPanelStyle"
    android:layout_width="match_parent"
    android:layout_height="@dimen/config_default_keyboard_height"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/bt_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:soundEffectsEnabled="false" />

                <TextView
                    android:id="@+id/bt_sound_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bt_sound"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:text="@string/settings_button_sound"
                    android:textColor="@color/settings_item_text_color"
                    android:textSize="9sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/bt_correction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:soundEffectsEnabled="false" />

                <TextView
                    android:id="@+id/bt_correction_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bt_correction"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:text="@string/settings_button_auto_correction"
                    android:textColor="@color/settings_item_text_color"
                    android:textSize="9sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/bt_capitalization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:soundEffectsEnabled="false" />

                <TextView
                    android:id="@+id/bt_capitalization_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bt_capitalization"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:text="@string/settings_button_auto_capitalization"
                    android:textColor="@color/settings_item_text_color"
                    android:textSize="9sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/bt_predictive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:soundEffectsEnabled="false" />

                <TextView
                    android:id="@+id/bt_predictive_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bt_predictive"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:text="@string/settings_button_word_prediction"
                    android:textColor="@color/settings_item_text_color"
                    android:textSize="9sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/bt_swipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:soundEffectsEnabled="false" />

                <TextView
                    android:id="@+id/bt_swipe_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bt_swipe"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:text="@string/settings_button_swipe"
                    android:textColor="@color/settings_item_text_color"
                    android:textSize="9sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/bt_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:soundEffectsEnabled="false" />

                <TextView
                    android:id="@+id/bt_more_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bt_more"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:text="@string/settings_button_more_settings"
                    android:textColor="@color/settings_item_text_color"
                    android:textSize="9sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" >
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dp" >
        </LinearLayout>
    </LinearLayout>

</com.smartkeyboard.rainbow.view.HSSettingsPanelView>