<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ihs.keyboard.superemoji.app.MainActivity" >

    <RelativeLayout
        android:id="@+id/view_main_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" >

        <LinearLayout
            android:id="@+id/view_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="7dp"
                android:scaleType="center"
                android:src="@drawable/app_rainbow_logo" />

            <TextView
                android:id="@+id/view_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="RainbowKey"
                android:textColor="#ffffff"
                android:textSize="28sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_logo"
            android:layout_centerHorizontal="true"
            android:paddingLeft="10dp"
            android:text="Colorful Chatting"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bt_step_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_step_two"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:background="@drawable/guide_button_selector"
        android:clipChildren="false" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/app_button_guide_1" >
        </ImageView>

        <TextView
            android:id="@+id/text_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="55dp"
            android:fontFamily="sans-serif"
            android:text="@string/toast_enable_keyboard"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="normal" >
        </TextView>

        <ImageView
            android:id="@+id/view_enter_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="230dp"
            android:src="@drawable/app_button_guide_enter" >
        </ImageView>

        <ImageView
            android:id="@+id/view_choose_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="220dp"
            android:src="@drawable/app_button_guide_choose" >
        </ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bt_step_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:background="@drawable/guide_button_selector"
        android:clipChildren="false" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/app_button_guide_2" >
        </ImageView>

        <TextView
            android:id="@+id/text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="55dp"
            android:fontFamily="sans-serif"
            android:text="@string/toast_select_keyboard"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="normal" >
        </TextView>

        <ImageView
            android:id="@+id/view_enter_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="230dp"
            android:src="@drawable/app_button_guide_enter" >
        </ImageView>

        <ImageView
            android:id="@+id/view_choose_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="220dp"
            android:src="@drawable/app_button_guide_choose" >
        </ImageView>
    </RelativeLayout>

    <Button
        android:id="@+id/bt_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_main_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:alpha="0"
        android:background="@drawable/guide_button_selector"
        android:text="Settings"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bt_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_settings"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:alpha="0"
        android:background="@drawable/guide_button_selector"
        android:text="Languages"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_text_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="25dp"
        android:background="#ffffff"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/main_activity_edittext_hint"
        android:imeOptions="actionNone"
        android:inputType="textCapSentences|textAutoCorrect"
        android:paddingBottom="10dp"
        android:paddingLeft="2dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textColorHint="#ff8f8f8f" />

</RelativeLayout>